fisrt step app.component and routes edited

--- a/ui/static/js/domain/interests/interestsTemplate.html
+++ b/ui/static/js/domain/interests/interestsTemplate.html
@@ -6,7 +6,7 @@
 
 		<div class="list-group">
 			<a ng-repeat="interest in interestsController.interests"
-				ng-href="#interests/{{interest.id}}" class="list-group-item"> <span
+				ng-href="#interests/" class="list-group-item"> <span
 				class="glyphicon glyphicon-user" aria-hidden="true"></span>
 				{{interest.name}}
 			</a>
