Fixes people group select

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html ng-app="app">
+<html ng-app="app" ng-strict-di="true">
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
-<link href="app.css" rel="stylesheet"><script type="text/javascript" src="app.js"></script></head>
+<title>InterestGroups</title>
+<link href="vendors.css?80f03e5e0076e0a4b49d" rel="stylesheet"><link href="main.css?80f03e5e0076e0a4b49d" rel="stylesheet"><script type="text/javascript" src="vendors.js?80f03e5e0076e0a4b49d&80f03e5e0076e0a4b49d"></script><script type="text/javascript" src="main.js?80f03e5e0076e0a4b49d&80f03e5e0076e0a4b49d"></script><script type="text/javascript" src="hot.js?80f03e5e0076e0a4b49d&80f03e5e0076e0a4b49d"></script></head>
 <body>
+
 	<ng-view></ng-view>
+	
 </body>
 </html>
